-- Fixed the family brush speed -- Added a class to help make the paddle visible over menu

--- a/src/css/trendImageViewer.css
+++ b/src/css/trendImageViewer.css
@@ -71,3 +71,11 @@ text.mono {
 .familyViewerRow {
     margin-top: 0;
 }
+
+.vertical_paddle_handle {
+    fill: #f8f9fa;
+}
+
+.horizontal_paddle_handle {
+    fill: none;
+}
